# cptools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  add_file.py  clean.py  colors.py  contest_status.py  cptools  install.sh  mark_status.py  new_contest.py  package-lock.json  package.json  pyproject.toml  template.cpp  update_info.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: commitlint.yml  relase.yml  release.yml  test-release.yml  test.yml
commands/: add.py  add_file.py  add_header.py  bundle.py  clean.py  commit.py  common.py  completion.py  config.py  contest_status.py  fetch.py  hash.py  init.py  mark.py  mark_status.py  new.py  new_contest.py  open.py  rm.py  status.py  stress.py  test.py  update.py
completions/: _cptools
cptools/: __main__.py
cptools/commands/: add.py  add_header.py  bundle.py  clean.py  commit.py  completion.py  config.py  fetch.py  hash.py  init.py  mark.py  new.py  open.py  rm.py  status.py  stress.py  test.py  update.py
cptools/lib/: __init__.py  compiler.py  config.py  display_utils.py  fileops.py  judges.py  parsing.py
cptools/lib/templates/: .gitignore.template
docs/: ADDING_JUDGES.md  COMMANDS.md
lib/: __init__.py  config.py  cookies.py  fileops.py  http_utils.py  io.py  judges.py  parsing.py  path_utils.py
lib/templates/: hasher.cpp  template.cpp
tests/: __init__.py  conftest.py  test_cmd_add.py  test_cmd_add_header.py  test_cmd_bundle.py  test_cmd_clean.py  test_cmd_commit.py  test_cmd_completion.py  test_cmd_config.py  test_cmd_fetch.py  test_cmd_hash.py  test_cmd_init.py  test_cmd_mark.py  test_cmd_new.py  test_cmd_open.py  test_cmd_rm.py  test_cmd_status.py  test_cmd_stress.py  test_cmd_test.py  test_cmd_update.py  test_compiler.py  test_config.py  test_cookies.py  test_discovery.py  test_display_utils.py  test_fileops.py  test_flag_consistency.py  test_http_utils.py  test_io.py  test_judges.py  test_main.py  test_parsing.py  test_path_utils.py
