[project]
name = "cptools"
version = "0.9.1"
description = "CLI toolkit for managing competitive programming contests and solutions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Lua"}]
dependencies = [
    "browser-cookie3>=0.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
# Aqui você diz ao Python para incluir as pastas lib e commands
packages = ["lib", "commands"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
major_on_zero = true
allow_zero_version = true
upload_to_pypi = false
upload_to_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
major_on_zero = true