[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lgf-cptools"
version = "1.0.0"
description = "CLI toolkit for managing competitive programming contests and solutions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Lua Guimarães Fernandes", email = "lua.guimaraes.src@gmail.com"}]
license = {text = "MIT"}
keywords = [
    "competitive-programming",
    "codeforces",
    "atcoder",
    "contests",
    "cli",
    "toolkit",
    "judge",
    "cp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "browser-cookie3>=0.19.1",
]

[project.urls]
Homepage = "https://github.com/src-lua/cptools"
Repository = "https://github.com/src-lua/cptools"
Issues = "https://github.com/src-lua/cptools/issues"
Documentation = "https://github.com/src-lua/cptools/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
cptools = "cptools.__main__:main"
cpt = "cptools.__main__:main"

[tool.setuptools]
packages = ["cptools", "cptools.lib", "cptools.commands"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
major_on_zero = true
allow_zero_version = true
upload_to_pypi = true
upload_to_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
major_on_zero = true